Fixed layout issue when searching in settings

--- a/styles.css
+++ b/styles.css
@@ -221,12 +221,9 @@ body {
 .melee-settings {
     padding: 20px 10px;
     display: grid;
+    grid-template-rows: auto auto 1fr;
     overflow: hidden;
     gap: 8px;
-}
-
-.settings-search {
-    grid-area: 1;
 }
 
 .warframe-settings {
